fixed some alignment on gallery

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -27,6 +27,7 @@
 
 header div div a.view-box:hover {
   border: 1px solid white !important;
+  display: block;
 }
 
 header div div a.view-box i:hover {
